<resources>
    <string name="app_name">MovieList</string>
    <string name="movie_title_hint">IMDB rate for the movie...</string>
    <string name="movie_title_label">Movie Title</string>
    <string name="movie_details_label">Details</string>
    <string name="movie_details_hint">Synopsis...</string>
    <string name="movie_solved_label">Checked</string>
    <string name="movie_comment_label">Comment</string>
    <string name="movie_comment_hint">Write down your thoughts</string>
    <string name="new_movie">New Movie</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d movies</string>
    <string name="delete_movie">delete movie</string>


</resources>
